Upload images server side

--- a/PlantsRecognition_v1/PlantsRecognition_v1/ClientApp/app/components/recognition/recognition.component.html
+++ b/PlantsRecognition_v1/PlantsRecognition_v1/ClientApp/app/components/recognition/recognition.component.html
@@ -2,7 +2,7 @@
 
 <h4>Upload A File And Predict</h4>
 <p-fileUpload name="myfile[]"
-              url="api/upload"
+              url="api/recognition"
               multiple="false"
               accept="image/*"
               maxFileSize="10000000"
