--- a/PlantsRecognition_v1/PlantsRecognition_v1/ClientApp/app/components/training/training.component.html
+++ b/PlantsRecognition_v1/PlantsRecognition_v1/ClientApp/app/components/training/training.component.html
@@ -1,5 +1,5 @@
 ﻿<p-fileUpload name="myfile[]"
-              url="api/upload"
+              url="api/training"
               multiple="true"
               accept="image/*"
               maxFileSize="10000000"
